# govuk-mcp

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
docs/audits/: canonical-audit-2026-04-19.md
govuk_mcp/: models.py  parsers.py  resources.py  server.py
tests/: test_drill_down.py
tests/live/: run_matrix.py
tests/live/fixtures/: planning_guidance.json
