[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "govuk-mcp"
version = "0.1.0"
description = "MCP server for GOV.UK — search, content, organisations and postcode lookup"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "govuk", "government", "uk", "fastmcp"]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
govuk-mcp = "govuk_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["govuk_mcp"]
